--- a/DecisionTrees/VT - hd - DT_clf v0.0.ipynb
+++ b/DecisionTrees/VT - hd - DT_clf v0.0.ipynb
@@ -24,8 +24,7 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import plot_confusion_matrix\n",
-    "import urllib.request\n",
-    "import gzip"
+    "import urllib.request"
    ]
   },
   {
@@ -1623,17 +1622,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "id": "e71a81cb-1a4b-4916-aaa3-4c8581be20f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1], dtype=int64)"
+       "0      0\n",
+       "1      1\n",
+       "2      1\n",
+       "3      0\n",
+       "4      0\n",
+       "      ..\n",
+       "297    1\n",
+       "298    1\n",
+       "299    1\n",
+       "300    1\n",
+       "301    1\n",
+       "Name: hd, Length: 297, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
