--- a/DecisionTrees/iris - DT_clf v0.0.ipynb
+++ b/DecisionTrees/iris - DT_clf v0.0.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 380,
    "id": "7ab01474-542b-4bc0-bbd1-bebf2f2e8e43",
    "metadata": {},
    "outputs": [
@@ -629,6 +629,22 @@
     "          class_names=[\"setosa\", \"versicolor\", \"virginica\"],\n",
     "          feature_names=X.columns);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "117ecaab-170c-4634-8ccc-5e625f9e349a",
+   "metadata": {},
+   "source": [
+    "Notice how the DecisionTreeClf is overfitted, just looking at the gini coefficients. When validating the data it might come apparent that this is the case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd0c78de-4f4e-4cc1-adf9-1ae8f4ce6798",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
