Update iris - DT_clf v0.0.ipynb
Added DecisionTree Classifier& Explanation (unoptimised)

--- a/DecisionTrees/iris - DT_clf v0.0.ipynb
+++ b/DecisionTrees/iris - DT_clf v0.0.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 381,
    "id": "60304121-a54d-4f1f-b389-83bef6b02d8e",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 382,
    "id": "3782c0b9-dac7-480e-9da2-a3e71a8c0b01",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "4  5.0  3.6  1.4  0.2  Iris-setosa"
       ]
      },
-     "execution_count": 361,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 383,
    "id": "0d633719-eaa2-4f31-8ff1-cd275ede0b76",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "4         5.0        3.6         1.4        0.2  Iris-setosa"
       ]
      },
-     "execution_count": 362,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 384,
    "id": "e60d193f-df41-4cb6-9ccd-16d6dbfb6bd9",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 385,
    "id": "62b609c0-1546-4ca0-a81a-2382aa316860",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        "array(['Iris-setosa', 'Iris-versicolor', 'Iris-virginica'], dtype=object)"
       ]
      },
-     "execution_count": 364,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 386,
    "id": "1a53054c-b484-4c44-9058-c770680e1f94",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "0"
       ]
      },
-     "execution_count": 365,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 387,
    "id": "5c5888c6-b743-4866-80f9-ab0cd3151c5c",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
        "4         5.0        3.6         1.4        0.2      0"
       ]
      },
-     "execution_count": 366,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 388,
    "id": "c61a767d-288b-48f2-a130-59b844aa9961",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 389,
    "id": "208bf518-7907-4e0f-94a7-a5f1ba556e2a",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 390,
    "id": "86a2802d-2c8b-4fa5-9e91-f267928e54f2",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 391,
    "id": "d923cdb2-137f-4c12-9655-feb3009c8d9e",
    "metadata": {},
    "outputs": [],
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 392,
    "id": "7ab01474-542b-4bc0-bbd1-bebf2f2e8e43",
    "metadata": {},
    "outputs": [
@@ -639,12 +639,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd0c78de-4f4e-4cc1-adf9-1ae8f4ce6798",
+   "cell_type": "markdown",
+   "id": "29e08672-5b34-4e3c-b8f2-44833747c41a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The DecisionTreeClassifier has the following:\n",
+    "`class sklearn.tree.DecisionTreeClassifier(*, criterion='gini', splitter='best', max_depth=None, min_samples_split=2, min_samples_leaf=1, min_weight_fraction_leaf=0.0, max_features=None, random_state=None, max_leaf_nodes=None, min_impurity_decrease=0.0, min_impurity_split=None, class_weight=None, ccp_alpha=0.0)`</br>\n",
+    "Notably, a <b>max_depth</b> and <b>ccp_alpha</b> can be defined, but all attributes are listed below:\n",
+    "\n",
+    "* criterion: entropy or gini\n",
+    "* splitter: best or random\n",
+    "* max_depth: (integer of) number of layers/depth of the tree\n",
+    "* min_sample_split: minimum number of samples required to split a node\n",
+    "* min_sample_leaf: minimum number of samples required to split a node into a leaf\n",
+    "* min_weight_fraction_leaf: minimum weighted fraction of the sum total of weights (of all the input samples) required to be at a leaf node (equal if not provided)\n",
+    "* max_features int, float or {“auto”, “sqrt”, “log2”}: number of features to consider when looking for the best split:\n",
+    "    * If **int**, then consider `max_features` features at each split\n",
+    "    * If **float**, then `max_features` is a fraction and `int(max_features * n_features)` features are considered at each split.\n",
+    "    * If “auto”, then `max_features=sqrt(n_features)`.\n",
+    "    * If “sqrt”, then `max_features=sqrt(n_features)`.\n",
+    "    * If “log2”, then `max_features=log2(n_features)`.\n",
+    "    * If `None`, then `max_features=n_features`.\n",
+    "* random_state: fixed value for consistency\n",
+    "* max_leaf_nodes: to grow a tree in 'best-first fashion'; just the amount of end-nodes permitted\n",
+    "* min_impurity_decrease: a node will be split if this split induces a decrease of the impurity greater than or equal to this value\n",
+    "> The weighted impurity decrease equation is the following:\n",
+    ">\n",
+    "$$ \\frac{N_{t}}{N} &#215; t $$\n",
+    "$ \\frac{N_{t}}{N} * (impurity - N_t_R / N_t * right_impurity - N_t_L / N_t * left_impurity) $\n",
+    ">\n",
+    "> where N is the total number of samples, N_t is the number of samples at the current node, N_t_L is the number of samples in the left child, and N_t_R is the number of samples in the right child.\n",
+    "> N, N_t, N_t_R and N_t_L all refer to the weighted sum, if sample_weight is passed.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
